<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('sprints', function (Blueprint $table) {
            $table->id();
            $table->foreignId('project_id')->constrained()->cascadeOnDelete();
            $table->integer('sprint_number');
            $table->date('start_date');
            $table->date('end_date');
            $table->string('goal');
            $table->enum('status', ['planning', 'active', 'complete'])->default('planning');
            $table->timestamps();
        });
    }
    public function down(): void
    {
        Schema::dropIfExists('sprints');
    }
};
