<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('task_solutions', function (Blueprint $table) {
            $table->id();
            $table->foreignId('task_id')->constrained()->cascadeOnDelete();
            $table->foreignId('student_id')->constrained('users')->cascadeOnDelete();
            $table->text('content');
            $table->enum('status', ['pending', 'approved', 'changes_requested'])->default('pending');
            $table->timestamp('submitted_at')->useCurrent();
        });
    }
    public function down(): void
    {
        Schema::dropIfExists('task_solutions');
    }
};
