<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('task_issue_replies', function (Blueprint $table) {
            $table->id();
            $table->foreignId('issue_id')->constrained('task_issues')->cascadeOnDelete();
            $table->foreignId('teacher_id')->constrained('users')->cascadeOnDelete();
            $table->text('replay');
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('task_issue_replies');
    }
};
