classDiagram
  class User {
    +id: int
    +full_name: string
    +email: string
    +password_hash: string
    +role: enum(teacher, student)
    +managedProjects()
    +projects()
    +tasks()
  }

  class Project {
    +id: int
    +title: string
    +status: enum
    +sprints()
    +tasks()
    +students()
  }

  class Sprint {
    +id: int
    +sprint_number: int
    +status: enum
    +tasks()
    +standups()
  }

  class Task {
    +id: int
    +dependencies: json
    +status: enum
    +issues()
    +solution()
  }

  class ProjectStudent {
    +role: string
    +points_earned: int
  }

  class TaskIssue {
    +id: int
    +task_id: int
    +status: enum
    +replies()
  }

  class TaskSolution {
    +id: int
    +content: text
    +feedback()
  }

  User "1" -- "0..*" Project : creates (Teacher)
  User "1" -- "0..*" ProjectStudent : participates (Student)
  Project "1" -- "0..*" ProjectStudent : has
  Project "1" -- "0..*" Sprint : contains
  Project "1" -- "0..*" Task : owns
  Sprint "1" -- "0..*" Task : includes
  User "1" -- "0..*" Task : assigned_to
  Task "1" -- "0..*" TaskIssue : has_blockers
  Task "1" -- "0..1" TaskSolution : submitted_by
  TaskIssue "1" -- "0..*" TaskIssueReply : has_replies
  TaskSolution "1" -- "0..1" TaskFeedback : receives